[gd_scene load_steps=8 format=4 uid="uid://cglsgkmlwnwqa"]

[ext_resource type="Script" uid="uid://mnr3dp6n0owc" path="res://Levels/TwoLoop/Speedrun/speedrun.gd" id="1_6b6ar"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="1_vwy70"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="2_5x7vv"]
[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="2_pkbnj"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="3_eooe0"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="4_swad0"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="7_5do1j"]

[node name="Speedrun" type="Node2D"]
script = ExtResource("1_6b6ar")

[node name="DudDoor" parent="." instance=ExtResource("2_5x7vv")]
position = Vector2(40, 288)

[node name="Door" parent="." instance=ExtResource("3_eooe0")]
position = Vector2(45, 32)

[node name="Button1" parent="." instance=ExtResource("4_swad0")]
position = Vector2(112, 272)

[node name="Button2" parent="." instance=ExtResource("4_swad0")]
position = Vector2(176, 224)

[node name="Button3" parent="." instance=ExtResource("4_swad0")]
position = Vector2(96, 176)

[node name="Button4" parent="." instance=ExtResource("4_swad0")]
position = Vector2(160, 128)

[node name="Button5" parent="." instance=ExtResource("4_swad0")]
position = Vector2(419, 256)

[node name="Button6" parent="." instance=ExtResource("4_swad0")]
position = Vector2(346, 256)

[node name="Platform1" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(315, 304)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="Endpoint" parent="Platform1" index="0"]
position = Vector2(315, 336)

[node name="Platform2" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(385, 304)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="Endpoint" parent="Platform2" index="0"]
position = Vector2(385, 336)

[node name="Platform3" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(445, 240)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="Endpoint" parent="Platform3" index="0"]
position = Vector2(445, 177)

[node name="Platform4" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(382, 240)
rotation = 1.5708
scale = Vector2(0.5, 0.5)

[node name="Endpoint" parent="Platform4" index="0"]
position = Vector2(382, 176)

[node name="AutoPlatform" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(199, 148)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
speed = 0.001

[node name="Endpoint" parent="AutoPlatform" index="0"]
position = Vector2(199, 41)

[node name="Platform5" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(520, 148)
scale = Vector2(1.25, 1)

[node name="Endpoint" parent="Platform5" index="0"]
position = Vector2(440, 148)

[node name="Platform6" parent="." instance=ExtResource("7_5do1j")]
position = Vector2(329, 104)
rotation = 1.5708
scale = Vector2(0.75, 0.75)

[node name="Endpoint" parent="Platform6" index="0"]
position = Vector2(329, 56)

[node name="Player" parent="." instance=ExtResource("1_vwy70")]
position = Vector2(42, 320)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = -10
limit_right = 576
limit_bottom = 324

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgACAAEAAAAFAAAAAgAAAAIAAAAGAAAAAgABAAIAAAAHAAAAAgABAAIAAAAIAAAAAgABAAIAAAAJAAAAAgABAAIAAAAKAAAAAgABAAIAAAALAAAAAgABAAIAAAAMAAAAAgABAAIAAAANAAAAAgABAAIAAAAOAAAAAgABAAIAAAAPAAAAAgABAAIAAAAQAAAAAgABAAIAAAARAAAAAgABAAIAAAASAAAAAgABAAIAAAATAAAAAgABAAIAAAAUAAAAAgABAAMAAAAVAAAAAgABAAEAAAAWAAAAAgABAAEAAAAXAAAAAgABAAEAAAAYAAAAAgABAAEAAAAZAAAAAgABAAEAAAAaAAAAAgABAAEAAAAbAAAAAgABAAEAAAAcAAAAAgABAAEAAAAdAAAAAgABAAEAAAAeAAAAAgABAAEAAAAfAAAAAgABAAEAAAAgAAAAAgABAAEAAAAhAAAAAgABAAEAAAAiAAAAAgABAAEAAAAjAAAAAgABAAEAAAAAAAEAAgACAAEAAAAAAAIAAgACAAEAAAAAAAMAAgACAAEAAAAAAAQAAgACAAMAAAAAAAUAAgAAAAMAAAAAAAYAAgACAAEAAAAAAAcAAgACAAEAAAAAAAgAAgACAAEAAAAAAAkAAgACAAEAAAAAAAoAAgACAAEAAAAAAAsAAgACAAEAAAAAAAwAAgACAAEAAAAAAA0AAgACAAEAAAAAAA4AAgACAAEAAAAAAA8AAgACAAEAAAAAABAAAgACAAEAAAAAABEAAgACAAEAAAAAABIAAgACAAEAAAAAABMAAgACAAEAAAAAABQAAgACAAMAAAABABQAAgABAAAAAAACABQAAgABAAAAAAADABQAAgABAAAAAAAEABQAAgABAAAAAAAFABQAAgABAAAAAAAGABQAAgABAAAAAAAHABQAAgABAAAAAAAIABQAAgABAAAAAAAJABQAAgABAAAAAAAKABQAAgABAAAAAAALABQAAgABAAAAAAAMABQAAgABAAAAAAANABQAAgABAAAAAAAOABQAAgABAAAAAAAPABQAAgABAAAAAAAQABQAAgABAAAAAAARABQAAgABAAAAAAASABQAAgABAAAAAAATABQAAgABAAAAAAAUABQAAgABAAAAAAAVABQAAgABAAAAAAAWABQAAgABAAAAAAAXABQAAgABAAAAAAAYABQAAgABAAAAAAAZABQAAgABAAAAAAAaABQAAgABAAAAAAAbABQAAgABAAAAAAAcABQAAgABAAAAAAAdABQAAgABAAAAAAAeABQAAgABAAAAAAAfABQAAgABAAAAAAAgABQAAgABAAAAAAAhABQAAgAAAAQAAAAiABQAAgABAAEAAAAjABQAAgABAAEAAAAAABUAAgABAAEAAAABABUAAgABAAEAAAACABUAAgABAAEAAAADABUAAgABAAEAAAAEABUAAgABAAEAAAAFABUAAgABAAEAAAAGABUAAgABAAEAAAAHABUAAgABAAEAAAAIABUAAgABAAEAAAAJABUAAgABAAEAAAAKABUAAgABAAEAAAALABUAAgABAAEAAAAMABUAAgABAAEAAAANABUAAgABAAEAAAAOABUAAgABAAEAAAAPABUAAgABAAEAAAAQABUAAgABAAEAAAARABUAAgABAAEAAAASABUAAgABAAEAAAATABUAAgABAAEAAAAUABUAAgABAAEAAAAVABUAAgABAAEAAAAWABUAAgABAAEAAAAXABUAAgABAAEAAAAYABUAAgABAAEAAAAZABUAAgABAAEAAAAaABUAAgABAAEAAAAbABUAAgABAAEAAAAcABUAAgABAAEAAAAdABUAAgABAAEAAAAeABUAAgABAAEAAAAfABUAAgABAAEAAAAgABUAAgABAAEAAAAhABUAAgABAAEAAAAiABUAAgABAAEAAAAjABUAAgABAAEAAAAjAP//AgABAAEAAAAiAP//AgABAAEAAAAhAP//AgABAAEAAAAgAP//AgABAAEAAAAfAP//AgABAAEAAAAeAP//AgABAAEAAAAdAP//AgABAAEAAAAcAP//AgABAAEAAAAbAP//AgABAAEAAAAaAP//AgABAAEAAAAZAP//AgABAAEAAAAYAP//AgABAAEAAAAXAP//AgABAAEAAAAWAP//AgABAAEAAAAVAP//AgABAAEAAAAUAP//AgABAAEAAAATAP//AgABAAEAAAASAP//AgABAAEAAAARAP//AgABAAEAAAAQAP//AgABAAEAAAAPAP//AgABAAEAAAAOAP//AgABAAEAAAANAP//AgABAAEAAAAMAP//AgABAAEAAAALAP//AgABAAEAAAAKAP//AgABAAEAAAAJAP//AgABAAEAAAAIAP//AgABAAEAAAAHAP//AgABAAEAAAAGAP//AgABAAEAAAAFAP//AgABAAMAAAAEAP//AgABAAIAAAADAP//AgABAAIAAAACAP//AgABAAIAAAABAP//AgABAAIAAAAAAP//AgABAAEAAAD/////AgABAAEAAAD//wAAAgABAAEAAAD//wEAAgABAAEAAAD//wIAAgABAAEAAAD//wMAAgABAAEAAAD//wQAAgABAAEAAAD//wUAAgABAAEAAAD//wYAAgABAAEAAAD//wcAAgABAAEAAAD//wgAAgABAAEAAAD//wkAAgABAAEAAAD//woAAgABAAEAAAD//wsAAgABAAEAAAD//wwAAgABAAEAAAD//w0AAgABAAEAAAD//w4AAgABAAEAAAD//w8AAgABAAEAAAD//xAAAgABAAEAAAD//xEAAgABAAEAAAD//xIAAgABAAEAAAD//xMAAgABAAEAAAD//xQAAgABAAEAAAD//xUAAgABAAEAAAAFAAsAAgAAAAAAAAAFAAwAAgAAAAIAAAAGAAsAAgACAAAAAAAGAAwAAgACAAIAAAAGABEAAgAAAAAAAAAGABIAAgAAAAIAAAAHABEAAgACAAAAAAAHABIAAgACAAIAAAAKAA4AAgAAAAAAAAAKAA8AAgAAAAIAAAALAA4AAgACAAAAAAALAA8AAgACAAIAAAAJAAkAAgAAAAIAAAAKAAkAAgACAAIAAAAKAAgAAgACAAAAAAAJAAgAAgAAAAAAAAANABAAAgAAAAEAAAAOABAAAgABAAEAAAAPABAAAgABAAEAAAAQABAAAgABAAEAAAARABAAAgABAAAAAAASABAAAgABAAAAAAATABAAAgABAAAAAAAUABAAAgABAAAAAAAVABAAAgABAAAAAAAWABAAAgABAAAAAAAXABAAAgABAAAAAAAYABAAAgABAAAAAAAZABAAAgABAAAAAAAaABAAAgABAAAAAAAbABAAAgABAAAAAAAcABAAAgABAAAAAAANAA4AAgAAAAEAAAANAA0AAgAAAAEAAAANAAwAAgAAAAEAAAANAAsAAgAAAAEAAAANAAoAAgAAAAEAAAANAAkAAgAAAAEAAAANAAgAAgAAAAEAAAANAAcAAgAAAAEAAAANAAYAAgAAAAEAAAANAAUAAgABAAMAAAAMAAUAAgABAAIAAAALAAUAAgABAAIAAAAKAAUAAgABAAIAAAAJAAUAAgABAAIAAAAIAAUAAgABAAIAAAAHAAUAAgABAAIAAAAGAAUAAgABAAIAAAAFAAUAAgABAAIAAAAEAAUAAgABAAIAAAADAAUAAgABAAIAAAACAAUAAgABAAIAAAABAAUAAgABAAIAAAAkAP//AgABAAEAAAAkAAAAAgABAAEAAAAkAAEAAgABAAEAAAAkAAIAAgABAAEAAAAkAAMAAgABAAEAAAAkAAQAAgABAAEAAAAkAAUAAgABAAEAAAAkAAYAAgABAAEAAAAkAAcAAgABAAEAAAAkAAgAAgABAAEAAAAkAAkAAgABAAEAAAAkAAoAAgABAAEAAAAkAAsAAgABAAEAAAAkAAwAAgABAAEAAAAkAA0AAgABAAEAAAAkAA4AAgABAAEAAAAkAA8AAgABAAEAAAAkABAAAgABAAEAAAAkABEAAgABAAEAAAAkABIAAgABAAEAAAAkABMAAgABAAEAAAAkABQAAgABAAEAAAAkABUAAgABAAEAAAAjAAEAAgABAAEAAAAjAAIAAgABAAEAAAAjAAMAAgABAAEAAAAjAAQAAgABAAMAAAAjAAUAAgAAAAEAAAAjAAYAAgAAAAEAAAAjAAcAAgAAAAEAAAAjAAgAAgAAAAEAAAAjAAkAAgAAAAEAAAAjAAoAAgAAAAQAAAAjAAsAAgABAAEAAAAjAAwAAgABAAEAAAAjAA0AAgABAAMAAAAjAA4AAgAAAAEAAAAjAA8AAgAAAAEAAAAjABAAAgAAAAEAAAAjABEAAgAAAAEAAAAjABIAAgAAAAQAAAAjABMAAgABAAEAAAANAA8AAgAAAAEAAAAcABEAAgABAAIAAAAbABEAAgABAAIAAAAaABEAAgABAAIAAAAZABEAAgABAAIAAAAYABEAAgABAAIAAAAXABEAAgABAAIAAAAWABEAAgABAAIAAAAVABEAAgABAAIAAAAUABEAAgABAAIAAAATABEAAgABAAIAAAASABEAAgABAAIAAAARABEAAgABAAIAAAAQABEAAgABAAIAAAAPABEAAgABAAIAAAAOABEAAgABAAIAAAANABEAAgAAAAIAAAAUAAwAAgAAAAAAAAAUAA0AAgAAAAIAAAAVAAwAAgABAAAAAAAVAA0AAgABAAIAAAAWAAwAAgABAAAAAAAWAA0AAgABAAIAAAAXAAwAAgABAAAAAAAXAA0AAgABAAIAAAAYAAwAAgABAAAAAAAYAA0AAgABAAIAAAAZAAwAAgABAAAAAAAZAA0AAgABAAIAAAAaAAwAAgABAAAAAAAaAA0AAgABAAIAAAAbAAwAAgABAAAAAAAbAA0AAgABAAIAAAAcAAwAAgABAAAAAAAcAA0AAgABAAIAAAAdAAwAAgABAAAAAAAdAA0AAgABAAIAAAAeAAwAAgABAAAAAAAeAA0AAgABAAIAAAAfAAwAAgABAAAAAAAfAA0AAgABAAIAAAAgAAwAAgABAAAAAAAgAA0AAgABAAIAAAAhAAwAAgAAAAQAAAAhAA0AAgABAAIAAAAiAAwAAgABAAEAAAAiAA0AAgABAAIAAAAiABMAAgABAAEAAAAiABIAAgABAAAAAAAhABIAAgAAAAAAAAAhABMAAgAAAAEAAAAPAA8AAgABAAEAAAAPAA4AAgABAAAAAAAOAA4AAgACAAMAAAAOAA8AAgABAAEAAAAOAA0AAgACAAEAAAAOAAwAAgACAAEAAAAOAAsAAgACAAEAAAAOAAoAAgACAAEAAAAOAAkAAgAAAAMAAAAOAAgAAgABAAEAAAAOAAcAAgABAAEAAAAOAAYAAgACAAMAAAAOAAUAAgACAAEAAAAQAA4AAgACAAAAAAAQAA8AAgACAAEAAAAdABAAAgACAAAAAAAdABEAAgACAAIAAAAOAAQAAgACAAAAAAANAAQAAgABAAAAAAAMAAQAAgABAAAAAAALAAQAAgABAAAAAAAKAAQAAgABAAAAAAAJAAQAAgABAAAAAAAIAAQAAgABAAAAAAAHAAQAAgABAAAAAAAGAAQAAgABAAAAAAAFAAQAAgABAAAAAAAEAAQAAgABAAAAAAADAAQAAgABAAAAAAACAAQAAgABAAAAAAABAAQAAgABAAAAAAAUAAgAAgABAAAAAAAVAAgAAgABAAAAAAAWAAgAAgABAAAAAAAXAAgAAgABAAAAAAAYAAgAAgABAAAAAAAZAAgAAgABAAAAAAAaAAgAAgABAAAAAAAbAAgAAgABAAAAAAAcAAgAAgABAAAAAAAdAAgAAgACAAAAAAAdAAkAAgACAAIAAAAcAAkAAgABAAIAAAAbAAkAAgABAAIAAAAaAAkAAgABAAIAAAAZAAkAAgABAAIAAAAYAAkAAgABAAIAAAAXAAkAAgABAAIAAAAWAAkAAgABAAIAAAAVAAkAAgABAAIAAAAUAAkAAgABAAIAAAATAAgAAgABAAAAAAASAAgAAgABAAAAAAARAAgAAgABAAAAAAAQAAgAAgACAAMAAAAPAAgAAgABAAEAAAATAAkAAgABAAIAAAASAAkAAgABAAIAAAARAAkAAgABAAIAAAAQAAkAAgABAAIAAAAPAAkAAgABAAIAAAAiAAoAAgABAAAAAAAhAAoAAgAAAAAAAAAhAAsAAgAAAAEAAAAiAAsAAgABAAEAAAAQAAYAAgACAAAAAAAPAAYAAgABAAAAAAAPAAcAAgABAAEAAAAQAAcAAgACAAEAAAAiAAQAAgABAAIAAAAhAAQAAgABAAIAAAAgAAQAAgABAAIAAAAfAAQAAgABAAIAAAAeAAQAAgABAAIAAAAdAAQAAgABAAIAAAAcAAQAAgABAAIAAAAbAAQAAgABAAIAAAAaAAQAAgABAAIAAAAZAAQAAgABAAIAAAAYAAQAAgABAAIAAAAXAAQAAgABAAIAAAAWAAQAAgABAAIAAAAVAAQAAgABAAIAAAAUAAQAAgAAAAIAAAAUAAMAAgAAAAEAAAAUAAIAAgAAAAEAAAAUAAEAAgAAAAEAAAAVAAEAAgABAAEAAAAVAAIAAgABAAEAAAAVAAMAAgABAAEAAAAWAAEAAgABAAEAAAAWAAIAAgABAAEAAAAWAAMAAgABAAEAAAAXAAEAAgABAAEAAAAXAAIAAgABAAEAAAAXAAMAAgABAAEAAAAYAAEAAgABAAEAAAAYAAIAAgABAAEAAAAYAAMAAgABAAEAAAAZAAEAAgABAAEAAAAZAAIAAgABAAEAAAAZAAMAAgABAAEAAAAaAAEAAgABAAEAAAAaAAIAAgABAAEAAAAaAAMAAgABAAEAAAAbAAEAAgABAAEAAAAbAAIAAgABAAEAAAAbAAMAAgABAAEAAAAcAAEAAgABAAEAAAAcAAIAAgABAAEAAAAcAAMAAgABAAEAAAAdAAEAAgABAAEAAAAdAAIAAgABAAEAAAAdAAMAAgABAAEAAAAeAAEAAgABAAEAAAAeAAIAAgABAAEAAAAeAAMAAgABAAEAAAAfAAEAAgABAAEAAAAfAAIAAgABAAEAAAAfAAMAAgABAAEAAAAgAAEAAgABAAEAAAAgAAIAAgABAAEAAAAgAAMAAgABAAEAAAAhAAEAAgABAAEAAAAhAAIAAgABAAEAAAAhAAMAAgABAAEAAAAiAAEAAgABAAEAAAAiAAIAAgABAAEAAAAiAAMAAgABAAEAAAA=")
tile_set = ExtResource("2_pkbnj")

[connection signal="just_pressed" from="Button1" to="." method="_on_button_1_just_pressed"]
[connection signal="just_unpressed" from="Button1" to="." method="_on_button_1_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]
[connection signal="just_pressed" from="Button3" to="." method="_on_button_3_just_pressed"]
[connection signal="just_unpressed" from="Button3" to="." method="_on_button_3_just_unpressed"]
[connection signal="just_pressed" from="Button4" to="." method="_on_button_4_just_pressed"]
[connection signal="just_unpressed" from="Button4" to="." method="_on_button_4_just_unpressed"]
[connection signal="just_pressed" from="Button5" to="." method="_on_button_5_just_pressed"]
[connection signal="just_unpressed" from="Button5" to="." method="_on_button_5_just_unpressed"]
[connection signal="just_pressed" from="Button6" to="." method="_on_button_6_just_pressed"]
[connection signal="just_unpressed" from="Button6" to="." method="_on_button_6_just_unpressed"]

[editable path="Platform1"]
[editable path="Platform2"]
[editable path="Platform3"]
[editable path="Platform4"]
[editable path="AutoPlatform"]
[editable path="Platform5"]
[editable path="Platform6"]
